# hakusura_houchi

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: backend.Dockerfile  pyproject.toml
backend/src/lane_relay/api/: main.py  schemas.py  settings.py
backend/src/lane_relay/api/routers/: battles.py  dev.py  health.py  master_data.py
backend/src/lane_relay/data/: loader.py  master_data_builder.py  validator.py
backend/src/lane_relay/domain/: battle_state.py  card.py  character.py  gauge.py
backend/src/lane_relay/engine/: action_scheduler.py  battle_engine.py  effect_resolver.py  event_logger.py  scenario_adapter.py
backend/tests/unit/: test_api_health.py  test_battle_engine.py
backend/tests/unit/data/: test_master_data_builder.py
data/source/cards/: card_claw.json  card_fire_ball.json  card_focus.json  card_recover.json
data/source/characters/: character_enemy_001.json  character_warrior_001.json
data/source/rules/: battle_rule_default.json
docs/: decision_log.md  development_overview.md
schemas/: card.schema.json  character.schema.json  trait.schema.json
schemas/definitions/: effect.schema.json  roll_rule.schema.json
temp_docs/: 放置ハクスラ_ゲーム仕様書.md  放置ハクスラ_ゲーム仕様書_v0.2.md  放置ハクスラ_仕様整合性レビュー_対応表.md  放置ハクスラ_総合設計書.md  放置ハクスラ_総合設計書_v1.1_2026-06-22.md  放置ハクスラ_開発方針WBS.md  放置ハクスラ_開発方針WBS_v1.0_2026-06-22.md
tools/: build_data.py  coverage_inspector.py
viewer/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  viewer.Dockerfile  vite.config.ts
viewer/src/: App.test.ts  App.vue  styles.css
(+32 files in other folders)
